package(default_visibility = ["//visibility:public"])
load("@crt//rules:transition.bzl", "platform_target")

cc_binary(
    name = "ld51_nes",
    srcs = ["main.c"],
    defines = [
        #"MAPPER_MMC3=1",
        "MAPPER_VRC7=1",
    ],
    deps = [
        "//game:entity",
        "//game:screen",
        "//game:transition",
        "//levels",
        #"//mappers/mmc3",
        "//mappers/vrc7",
        "//neslib:globals",
        "//neslib/ppu",
        "//neslib/controller",
        "//neslib/util:debug",
        "//resources:sprites",
        "//unscii",
        "//resources:background",
    ],
    linkopts = [
        "-vm", "--mapfile", "/tmp/ld51.map",
#        "-Wl", "--start-group,$(location //music:cfplayer),$(location //music:songs),$(location //mappers/vrc7),--end-group",

    ],
)

platform_target(
    name = "ld51",
    platform = "@crt//platforms/m6502:nintendo-nes",
    target = ":ld51_nes",
)
