package(default_visibility = ["//visibility:public"])

cc_library(
    name = "screen",
    srcs = ["screen.c"],
    hdrs = ["screen.h"],
    deps = [
        "//music:cfplayer",
        "//music:songs",
        "//neslib/ppu",
        "//neslib/util:random",
        "//levels",
    ],
)

cc_library(
    name = "transition",
    srcs = ["transition.c"],
    hdrs = ["transition.h"],
    deps = [
        "//music:cfplayer",
        "//neslib/ppu",
        "//levels",
    ],
)

cc_library(
    name = "entity",
    srcs = ["entity.c"],
    hdrs = ["entity.h"],
    deps = [
        ":screen",
        "//neslib/ppu",
        "//neslib/controller",
        "//neslib/util:random",
    ],
)
