package(default_visibility = ["//visibility:public"])
load("@crt//rules:transition.bzl", "platform_target")

cc_binary(
    name = "mmc3_nes",
    srcs = ["hello.c"],
    defines = ["MAPPER_MMC3=1"],
    deps = [
        "//mappers/mmc3",
        "//neslib:globals",
        "//neslib/ppu",
        "//neslib/controller",
        "//unscii",
    ],
    linkopts = [
        "--mapfile", "/tmp/hello.map",
    ],
)

platform_target(
    name = "mmc3",
    platform = "@crt//platforms/m6502:nintendo-nes",
    target = ":mmc3_nes",
)

cc_binary(
    name = "mmc5_nes",
    srcs = ["hello.c"],
    defines = ["MAPPER_MMC5=1"],
    deps = [
        "//mappers/mmc5",
        "//neslib:globals",
        "//neslib/ppu",
        "//neslib/controller",
        "//neslib/util:debug",
        "//unscii",
    ],
    linkopts = [
        "--mapfile", "/tmp/hello.map",
    ],
)

platform_target(
    name = "mmc5",
    platform = "@crt//platforms/m6502:nintendo-nes",
    target = ":mmc5_nes",
)
