package(default_visibility = ["//visibility:public"])

cc_library(
    name = "mmc3",
    hdrs = ["mmc3.h"],
    srcs = ["crt0.s"],
    target_compatible_with = ["@crt//antique/cpu:m6502"],
    linkopts = [
        "-C", "$(location :mmc3.ld)",
    ],
    deps = [
        "mmc3.ld",
        "//neslib:globals",
        "//util:compiler",
    ],

)
